Fixed height pane 2 rows: hover overflow debug

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -146,6 +146,7 @@ table#reportData tr.rowa td {
 	overflow:visible;
   text-shadow: 0px 0px 1em white,0px 1px 1em white,1px 0px 1em white,1px 1px 1em white,0px -1px 1em white,-1px 0px 1em white,-1px -1px 1em white;
   position: relative;
+  font-weight: bold;
   z-index: 999;
 }
 
